--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Poetsen+One&display=swap" rel="stylesheet">
 </head>
-<body>
-    <main  class="text-center p-6">
-        <h1 class="p-4 font-poetsen text-5xl opacity-85">Kids Want Palestine to be Free</h1>
-        <h2>Palestinian kids want to be free. Palestinian grownups want their kids to be safe.</h2>
-        <p>My name is Abel and I'm six years old and I was the one that wanted to make this website to help Palestine. I'm sad that so many Palestinians have been killed by Israel. So that's why I drew a sad face. I picked out the fonts and the colors for this website. My mom did the coding. The code shows a sad face for everyone Israel has killed in Palestine (this is a UN statistic for people killed since October 7, 2023, most recently updated on March 14, 2024.)</p>
-        <button></button>
-        <p>Push the button above to see how many babies, kids, and grownups Israel has killed since October 7, 2023.</p>
-        <p>Click <a href="https://pcrf1.app.neoncrm.com/absaysfreepalestine">here</a> to donate to my fundraiser for the Palestinian Children's Relief Fund. Donate what you can.</p>
+<body class="bg-[#eceae7] ">
+    <main  class="bg-redGreen bg-cover text-center font-caveat py-4 px-4 md:px-16 lg:px-24">
+        <h1 class="font-poetsen text-green-950 text-7xl opacity-85 py-4">Kids Want Palestine to be Free</h1>
+        <div id="display0" class="flex justify-center"></div>
+        <h2 class="text-5xl py-4 text-red-900">Palestinian <strong>kids</strong> want to be <strong>free.</strong> Palestinian grownups want their kids to be <strong>safe.</strong></h2>
+        <div id="display1" class="flex justify-center"></div>
+        <p class="text-3xl py-4">My name is AB and I'm six years old and I was the one that wanted to make this website to help Palestine. I'm sad that so many Palestinians have been killed by Israel. So that's why I drew a sad face. I picked out the fonts and the words and did the art for this website. My mom did the coding. The code shows <strong> a sad face for everyone Israel has killed in Palestine.</strong></p>
+        <div id="display2" class="flex justify-center"></div>
+        <p class="text-xl py-4 font-sans">a note from AB's mom: Israeli occupying forces have murdered <strong>35,671 people,</strong> mostly civilians and including over <strong>14,500 children,</strong> between <strong>October 7, 2023</strong> and <strong>May 14, 2024.</strong></p>
+        <div id="display3" class="flex justify-center"></div>
+        <p class="text-2xl font-poetsen py-4">Click <a href="https://pcrf1.app.neoncrm.com/absaysfreepalestine" class="text-green-900 underline">here</a> to donate to my fundraiser for the <span class="text-red-900">Palestinian Children's Relief Fund.</span> Donate what you can.</p>
+        <div id="display4" class="flex flex-wrap justify-center"></div>
     </main>
 
 <script src="./src/main.js"></script>
